header and fonts added

--- a/index.html
+++ b/index.html
@@ -6,8 +6,40 @@
 			content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>html-css-boolando</title>
+<!--	STYLE   -->
+	<link rel="stylesheet" href="assets/style.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
+	<!--	FONTS   -->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+
 </head>
 <body>
+
+	<header class="header">
+		<div class="container">
+			<nav class="navbar">
+
+				<ul class="navbar-links left">
+					<li>Donna</li>
+					<li>Uomo</li>
+					<li>Bambini</li>
+				</ul>
+
+				<div class="logo">
+					<a href="index.html"><img src="assets/img/boolean-logo.png" alt="boolean logo"></a>
+				</div>
+
+				<ul class="navbar-links right">
+					<li><i class="fa-regular fa-user"></i></li>
+					<li><i class="fa-regular fa-heart"></i></li>
+					<li><i class="fa-solid fa-bag-shopping"></i></li>
+				</ul>
+
+			</nav>
+		</div>
+	</header>
 
 </body>
 </html>
