--- a/index.html
+++ b/index.html
@@ -41,5 +41,50 @@
 		</div>
 	</header>
 
+	<main class="main">
+<!--		SHOP    -->
+		<section class="section-feature shop">
+			<div class="container">
+				<div class="item">
+					<img src="assets/img/1.webp" alt="photo 1">
+					<div class="description brand">Levi's</div>
+					<div class="description model">RELAXED FIT TEE UNISEX</div>
+					<div class="description price">14,99€<span class="description old-price"> 29,99€</span></div>
+				</div>
+				<div class="item">
+					<img src="assets/img/2.webp" alt="photo 2">
+					<div class="description brand">Guess</div>
+					<div class="description model">ROSES TEE</div>
+					<div class="description price">20,99€<span class="description old-price"> 29,99€</span></div>
+				</div>
+				<div class="item">
+					<img src="assets/img/3.webp" alt="photo 3">
+					<div class="description brand">Come Zucchero Filato</div>
+					<div class="description model">VOGLIA DI COLORI PASTELLO</div>
+					<div class="description price">129,99€<span class="description old-price"> 184,99€</span></div>
+				</div>
+				<div class="item">
+					<img src="assets/img/4.webp" alt="photo 4">
+					<div class="description brand">Levi's</div>
+					<div class="description model">TEE UNISEX</div>
+					<div class="description price">14,99€<span class="description old-price"> 29,99€</span></div>
+				</div>
+				<div class="item">
+					<img src="assets/img/5.webp" alt="photo 5">
+					<div class="description brand">Maya Deluxe</div>
+					<div class="description model">STRIPE BODICE</div>
+					<div class="description price">99,99€</div>
+				</div>
+				<div class="item">
+					<img src="assets/img/6.webp" alt="photo 6">
+					<div class="description brand">Levi's</div>
+					<div class="description model">RELAXED FIT TEE UNISEX</div>
+					<div class="description price">29,99€</div>
+				</div>
+			</div>
+
+		</section>
+
+	</main>
 </body>
 </html>
