--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 			content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>html-css-boolando</title>
-<!--	STYLE   -->
+	<!--	STYLE   -->
 	<link rel="stylesheet" href="assets/style.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
 	<!--	FONTS   -->
@@ -42,7 +42,7 @@
 	</header>
 
 	<main class="main">
-<!--		SHOP    -->
+		<!--	SHOP    -->
 		<section class="section-feature shop">
 			<div class="container">
 				<div class="item">
@@ -50,36 +50,60 @@
 					<div class="description brand">Levi's</div>
 					<div class="description model">RELAXED FIT TEE UNISEX</div>
 					<div class="description price">14,99€<span class="description old-price"> 29,99€</span></div>
+					<i class="fa-solid fa-heart"></i>
+					<div class="price-status">
+						<div class="discount">-50%</div>
+						<div class="sustainability">Sostenibilità</div>
+					</div>
 				</div>
 				<div class="item">
 					<img src="assets/img/2.webp" alt="photo 2">
 					<div class="description brand">Guess</div>
 					<div class="description model">ROSES TEE</div>
 					<div class="description price">20,99€<span class="description old-price"> 29,99€</span></div>
+					<i class="fa-solid fa-heart"></i>
+					<div class="price-status">
+						<div class="discount">-30%</div>
+					</div>
 				</div>
 				<div class="item">
 					<img src="assets/img/3.webp" alt="photo 3">
 					<div class="description brand">Come Zucchero Filato</div>
 					<div class="description model">VOGLIA DI COLORI PASTELLO</div>
 					<div class="description price">129,99€<span class="description old-price"> 184,99€</span></div>
+					<i class="fa-solid fa-heart"></i>
+					<div class="price-status">
+						<div class="discount">-30%</div>
+					</div>
 				</div>
 				<div class="item">
 					<img src="assets/img/4.webp" alt="photo 4">
 					<div class="description brand">Levi's</div>
 					<div class="description model">TEE UNISEX</div>
 					<div class="description price">14,99€<span class="description old-price"> 29,99€</span></div>
+					<i class="fa-solid fa-heart"></i>
+					<div class="price-status">
+						<div class="discount">-50%</div>
+						<div class="sustainability">Sostenibilità</div>
+					</div>
+
 				</div>
 				<div class="item">
 					<img src="assets/img/5.webp" alt="photo 5">
 					<div class="description brand">Maya Deluxe</div>
 					<div class="description model">STRIPE BODICE</div>
 					<div class="description price">99,99€</div>
+					<i class="fa-solid fa-heart"></i>
 				</div>
 				<div class="item">
 					<img src="assets/img/6.webp" alt="photo 6">
 					<div class="description brand">Levi's</div>
 					<div class="description model">RELAXED FIT TEE UNISEX</div>
 					<div class="description price">29,99€</div>
+					<i class="add-to-favorite fa-solid fa-heart"></i>
+					<div class="price-status">
+						<div class="sustainability">Sostenibilità</div>
+					</div>
 				</div>
 			</div>
 
