--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 		<section class="section-feature shop">
 			<div class="container">
 				<div class="item">
-					<img src="assets/img/1.webp" alt="photo 1">
+					<img id="ph1" src="assets/img/1.webp" alt="photo 1">
 					<div class="description brand">Levi's</div>
 					<div class="description model">RELAXED FIT TEE UNISEX</div>
 					<div class="description price">14,99€<span class="description old-price"> 29,99€</span></div>
@@ -57,7 +57,7 @@
 					</div>
 				</div>
 				<div class="item">
-					<img src="assets/img/2.webp" alt="photo 2">
+					<img id="ph2" src="assets/img/2.webp" alt="photo 2">
 					<div class="description brand">Guess</div>
 					<div class="description model">ROSES TEE</div>
 					<div class="description price">20,99€<span class="description old-price"> 29,99€</span></div>
@@ -67,7 +67,7 @@
 					</div>
 				</div>
 				<div class="item">
-					<img src="assets/img/3.webp" alt="photo 3">
+					<img id="ph3" src="assets/img/3.webp" alt="photo 3">
 					<div class="description brand">Come Zucchero Filato</div>
 					<div class="description model">VOGLIA DI COLORI PASTELLO</div>
 					<div class="description price">129,99€<span class="description old-price"> 184,99€</span></div>
@@ -77,7 +77,7 @@
 					</div>
 				</div>
 				<div class="item">
-					<img src="assets/img/4.webp" alt="photo 4">
+					<img id="ph4" src="assets/img/4.webp" alt="photo 4">
 					<div class="description brand">Levi's</div>
 					<div class="description model">TEE UNISEX</div>
 					<div class="description price">14,99€<span class="description old-price"> 29,99€</span></div>
@@ -89,14 +89,14 @@
 
 				</div>
 				<div class="item">
-					<img src="assets/img/5.webp" alt="photo 5">
+					<img id="ph5" src="assets/img/5.webp" alt="photo 5">
 					<div class="description brand">Maya Deluxe</div>
 					<div class="description model">STRIPE BODICE</div>
 					<div class="description price">99,99€</div>
 					<i class="fa-solid fa-heart"></i>
 				</div>
 				<div class="item">
-					<img src="assets/img/6.webp" alt="photo 6">
+					<img id="ph6" src="assets/img/6.webp" alt="photo 6">
 					<div class="description brand">Levi's</div>
 					<div class="description model">RELAXED FIT TEE UNISEX</div>
 					<div class="description price">29,99€</div>
