--- a/index.html
+++ b/index.html
@@ -86,7 +86,6 @@
 						<div class="discount">-50%</div>
 						<div class="sustainability">Sostenibilità</div>
 					</div>
-
 				</div>
 				<div class="item">
 					<img id="ph5" src="assets/img/5.webp" alt="photo 5">
@@ -106,9 +105,31 @@
 					</div>
 				</div>
 			</div>
-
 		</section>
-
 	</main>
+
+	<footer class="footer">
+		<div class="container">
+			<div class="info">
+				<div class="company-name">Boolando s.r.l</div>
+				<ul>
+					<li>Informazioni legali</li>
+					<li>Informativa sulla privacy</li>
+					<li>Diritto di recesso</li>
+				</ul>
+			</div>
+			<div class="social">
+				<div><strong>Trovaci anche su:</strong></div>
+				<ul>
+					<li><i class="fa-brands fa-square-twitter"></i></li>
+					<li><i class="fa-brands fa-square-facebook"></i></li>
+					<li><i class="fa-brands fa-square-instagram"></i></li>
+					<li><i class="fa-brands fa-square-pinterest"></i></li>
+					<li><i class="fa-brands fa-square-youtube"></i></li>
+				</ul>
+			</div>
+		</div>
+	</footer>
+
 </body>
 </html>
